# BCN3D-Moveo_Deep-Reinforcement-Learning

./: README.md
moveo_DRL/: avg_Return_1200E_100Stps
moveo_DRL/devel/: .catkin  local_setup.sh
moveo_DRL/devel/include/openai_ros/: RLExperimentInfo.h
moveo_DRL/devel/include/theconstruct_msgs/: RLExperimentInfo.h
moveo_DRL/devel/lib/pkgconfig/: moveo_description.pc  moveo_moveit_config.pc  moveo_training.pc  openai_ros.pc  rl_agent.pc  rl_common.pc  rl_env.pc  rl_experiment.pc  rl_msgs.pc  roboticsgroup_upatras_gazebo_plugins.pc  theconstruct_msgs.pc
moveo_DRL/src/moveo_description/: CMakeLists.txt  package.xml
moveo_DRL/src/moveo_description/launch/: start_xacro.launch
moveo_DRL/src/moveo_description/meshes/: Base.stl  Base_Endeffektor_col.stl  Base_col.stl  Gripper_Left.stl  Gripper_Right.stl  Idol_Gear.stl  Link_1.stl  Link_1_col.stl  Link_2.stl  Link_2_col.stl  Link_3.stl  Link_3_col.stl  Link_4.stl  Link_4_col.stl  Link_5.stl  Link_5_col.stl  Link_5_full.stl  Pivot_Arm.stl  Servo_Gear.stl
moveo_DRL/src/moveo_description/urdf/: goalPoint.urdf  links_joints.xacro  moveo.urdf.xacro
moveo_DRL/src/moveo_moveit/: CMakeLists.txt  package.xml
moveo_DRL/src/moveo_moveit/inofiles/: moveo.ino
moveo_DRL/src/moveo_moveit/moveo_moveit_arduino/: moveo_moveit_arduino.ino
moveo_DRL/src/moveo_moveit/moveo_moveit_arduino/MultiStepperTest/: MultiStepperTest.ino
moveo_DRL/src/moveo_moveit/msg/: ArmJointState.msg
moveo_DRL/src/moveo_moveit/src/: move_group_interface_coor_1.cpp  moveit_convert copy.cpp  moveit_convert.cpp
moveo_DRL/src/moveo_moveit_config/: .setup_assistant  package.xml
moveo_DRL/src/moveo_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  moveo_description.srdf  ompl_planning.yaml  ros_controllers.yaml
moveo_DRL/src/moveo_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  empty_world.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveo_description_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
moveo_DRL/src/moveo_moveit_config/worlds/: moveo_IK_world.world
moveo_DRL/src/moveo_training/: CMakeLists.txt
moveo_DRL/src/moveo_training/moveo_commander/: moveo_commander.py  moveo_commander1.py
moveo_DRL/src/moveo_training/scripts/: A3C_Continuous_moveo.py  A3C_moveo_ik.py  CMakeLists.txt  REINFORCE.ipynb  (+23 more)
moveo_DRL/src/wandb/: latest-run
moveo_DRL/wandb/: latest-run
moveo_DRL/wandb/run-20210803_092451-3eec2n7k/: run-3eec2n7k.wandb
moveo_DRL/wandb/run-20210803_104613-pwpsxrlv/: run-pwpsxrlv.wandb
moveo_DRL/wandb/run-20210803_104733-2gple2g5/: run-2gple2g5.wandb
moveo_DRL/wandb/run-20210803_104846-s6v94awh/: run-s6v94awh.wandb
moveo_DRL/wandb/run-20210803_105440-3ku1r6u2/: run-3ku1r6u2.wandb
moveo_DRL/wandb/run-20210803_105636-1qvdanlv/: run-1qvdanlv.wandb
moveo_DRL/wandb/run-20210803_105739-3eljcsxm/: run-3eljcsxm.wandb
moveo_DRL/wandb/run-20210803_105836-1ctasm28/: run-1ctasm28.wandb
moveo_DRL/wandb/run-20210803_105906-3n11mx5c/: run-3n11mx5c.wandb
moveo_DRL/wandb/run-20210803_110007-39dur6vl/: run-39dur6vl.wandb
moveo_DRL/wandb/run-20210803_110623-288jl332/: run-288jl332.wandb
moveo_DRL/wandb/run-20210803_110718-32bug1s7/: run-32bug1s7.wandb
moveo_DRL/wandb/run-20210803_110840-cse6az5k/: run-cse6az5k.wandb
moveo_DRL/wandb/run-20210803_110945-1yxr9182/: run-1yxr9182.wandb
moveo_DRL/wandb/run-20210803_111251-228d0jxl/: run-228d0jxl.wandb
moveo_DRL/wandb/run-20210803_111341-35csrrqn/: run-35csrrqn.wandb
moveo_DRL/wandb/run-20210803_111458-1n17u6d2/: run-1n17u6d2.wandb
moveo_DRL/wandb/run-20210803_111536-ayxh4dpb/: run-ayxh4dpb.wandb
moveo_DRL/wandb/run-20210803_111620-1kqaz74p/: run-1kqaz74p.wandb
moveo_DRL/wandb/run-20210803_111845-1ezbmf2g/: run-1ezbmf2g.wandb
moveo_DRL/wandb/run-20210803_112156-3j78nmwk/: run-3j78nmwk.wandb
moveo_DRL/wandb/run-20210803_112227-1yhdor90/: run-1yhdor90.wandb
moveo_DRL/wandb/run-20210803_113100-2ot0k720/: run-2ot0k720.wandb
moveo_DRL/wandb/run-20210803_113132-3ktaw186/: run-3ktaw186.wandb
moveo_DRL/wandb/run-20210803_113357-2xb2ytds/: run-2xb2ytds.wandb
moveo_DRL/wandb/run-20210803_113551-2xrqiiza/: run-2xrqiiza.wandb
moveo_DRL/wandb/run-20210803_113712-14f44u4m/: run-14f44u4m.wandb
moveo_DRL/wandb/run-20210803_114216-23zzf2a8/: run-23zzf2a8.wandb
moveo_DRL/wandb/run-20210803_114253-3ew3qulb/: run-3ew3qulb.wandb
moveo_DRL/wandb/run-20210803_114335-1qozd81z/: run-1qozd81z.wandb
moveo_DRL/wandb/run-20210803_114420-2z6t080d/: run-2z6t080d.wandb
moveo_DRL/wandb/run-20210803_114601-18l8d8jp/: run-18l8d8jp.wandb
moveo_DRL/wandb/run-20210803_114706-2duz2fm1/: run-2duz2fm1.wandb
moveo_DRL/wandb/run-20210803_121117-ebf1qwv2/: run-ebf1qwv2.wandb
moveo_DRL/wandb/run-20210809_112903-3tsvlosx/: run-3tsvlosx.wandb
moveo_DRL/wandb/run-20210809_113208-9ecpv81h/: run-9ecpv81h.wandb
(+220 files in other folders)
